--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
 WHATSAPP_TOKEN=ton_token_meta
 VERIFY_TOKEN=ton_token_de_verification
 PHONE_NUMBER_ID=ton_id_numero
+# .env
+APP_SCRIPT_URL=https://script.google.com/macros/s/AKfycbxFfUhjcDF0w5OBIhB-MAfOz2sxH4uQ7YvuLuRUv6n7ZtqVEXjbc8xceBGbdE5959ph/exec
